fixed spacing for mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -311,12 +311,12 @@ body, html {
   
   .sub {
 	max-width:80%;
-	margin: 10%;
+	margin-right: 15%;
 	margin-left: 15%;
   }
   
   .subinfotext {
-	  text-align:center;
+	  text-align:justify;
   }
   
   .summarytxt {
